Bug 250475 - KDE 4.5 konqueror/dolphin opening shell scripts instead of running them
Summary: KDE 4.5 konqueror/dolphin opening shell scripts instead of running them
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: regression
: 258369 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-07 19:23 UTC by ancow
Modified: 2011-02-12 19:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ancow 2010-09-07 19:23:41 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

When I navigate to a shell script via keyboard and press the enter key on it, dolphin and konqueror open the file in kate. If I click on it with the mouse, it is executed properly.
Pressing enter and the left mouse button on a file shouldn't be interpreted differently.

Reproducible: Always

Steps to Reproduce:
Navigate to a shell script with proper executable permissions set and press an enter key (either one works).

Actual Results:  
Shell script is opened with kate.

Expected Results:  
Shell script should be executed.

- This started immediately after my upgrade to 4.5.0 and persists in 4.5.1.
- I'm actually using KDE SC 4.5.1, that version just can't be selected using the web form.
Comment 1 Frank Reininghaus 2010-09-08 11:38:57 UTC
Thanks for the bug report! I can reproduce the issue in trunk.
Comment 2 Thomas Wihl 2010-10-18 12:56:52 UTC
Same is true for executables:
Try to launch an executable. If you left click it will be launched, with the enter key an "Open with" dialog comes up and there is no way to execute it.
Comment 3 ancow 2010-10-18 13:21:55 UTC
In fact, this applies to any file: clicking on it will result in the action chosen for this filetype. Pressing enter will result in whatever action is listed on top of the list you get when you right-click on it an choose "open with".
Comment 4 ancow 2011-02-09 14:19:41 UTC
This really annoying bug is still around in 4.6.
Is there any need for additional information, or is this bug just that hard to fix?
Comment 5 Peter Penz 2011-02-09 22:06:40 UTC
Git commit ec05ba261fffa6d9a4d301e5ee64d3922a6d020d by Peter Penz.
Committed on 09/02/2011 at 22:04.
Pushed by ppenz into branch 'KDE/4.6'.

Assure that RETURN emits itemTriggered() for one file

If only one file is selected, pressing RETURN should behave similar like triggering the item with the mouse. For this the signal itemTriggered() must be emitted.

BUG: 250475

M  +14   -10   dolphin/src/views/dolphinviewcontroller.cpp     

http://commits.kde.org/kde-baseapps/ec05ba261fffa6d9a4d301e5ee64d3922a6d020d
Comment 6 Peter Penz 2011-02-09 22:07:32 UTC
Git commit 0f9db71ad96580a2b65c78c31925daa4cd411ebb by Peter Penz.
Committed on 09/02/2011 at 22:05.
Pushed by ppenz into branch 'master'.

Assure that RETURN emits itemTriggered() for one file

If only one file is selected, pressing RETURN should behave similar like triggering the item with the mouse. For this the signal itemTriggered() must be emitted.

CCBUG: 250475

M  +13   -9    dolphin/src/views/dolphinviewcontroller.cpp     

http://commits.kde.org/kde-baseapps/0f9db71ad96580a2b65c78c31925daa4cd411ebb
Comment 7 Frank Reininghaus 2011-02-12 19:14:06 UTC
*** Bug 258369 has been marked as a duplicate of this bug. ***