Assure that RETURN emits itemTriggered() for one file

If only one file is selected, pressing RETURN should behave similar like triggering the item with the mouse. For this the signal itemTriggered() must be emitted.

BUG: 250475